Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-20336

22 more fails in gdi32:bitmap after 5d5e5d1 and PR#8348 commit (SetDIBitsToDevice)

    XMLWordPrintable

Details

    Description

      After the commit of 5d5e5d1 which fixed CORE-15002 there are 22 more failures in the gdi32:bitmap test.
      This was a result of the commit of PR#8348.
      I have created a minimized gdi32:bitmap test that only includes the changed results here gdi32_winetest_bitmap-07.zip
      For these tests, I left all of the surrounding tests in place and added "expected" values as well.
      Here is the compiled version of this test gdi32_winetest.exe

      Here are the results of this test before the commit causing the extra failures:

      And here are the results of this test after the commit causing the extra failures:

      Here it is easy to see the difference of after (38) minus before (16) for a total of 22 more fails.
      These involve two of the basic bitmap tests as follows:
      1) test_SetDIBitsToDevice and 2) test_SetDIBitsToDevice_RLE8.
      In each case these involve bitmaps that are Top Down and these have negative heights.
      The more common bitmaps use positive heights and are Bottom Up.

      I have created a Visual Basic 6 program compiled as an EXE here: SetDIBitsToDevice0.4.9.exe .
      This allows a visual way to test the function of SetDIBitsToDevice in Windows to better understand its functionality.

      Attachments

        1. gdi32_winetest_bitmap-07.zip
          3 kB
        2. gdi32_winetest.exe
          56 kB
        3. 16-1708-gdi32_bitmap_3.png
          16-1708-gdi32_bitmap_3.png
          147 kB
        4. 16-1707-gdi32_bitmap_3.png
          16-1707-gdi32_bitmap_3.png
          118 kB
        5. SAI_Paint_new-08.patch
          1 kB
        6. SetDIBitsToDevice49.zip
          6 kB
        7. SetDIBitsToDevice0.4.9.exe
          64 kB
        8. Test KVM_build_38947_gdi32_bitmap_e.txt
          0.9 kB

        Issue Links

          Activity

            People

              DougLyons DougLyons
              DougLyons DougLyons
              Votes:
              1 Vote for this issue
              Watchers:
              0 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: